Plugin 'Win': Avoid scrollbars when moving window outside browser window

--- a/www/plugins/win/style.css
+++ b/www/plugins/win/style.css
@@ -1,3 +1,6 @@
+body {
+  overflow: hidden;
+}
 div.win_root {
   position: absolute;
   z-index: 10005;
